# ansible-role-rhoso-luna-hsm

./: AUTHORS  README.md  setup.cfg  tox.ini
defaults/: main.yml
files/: image_add_luna_minimal_client.sh
tasks/: create_image.yml  create_secrets.yml  main.yml
templates/: login_secret.yml.j2  luna_cert_secret.yml.j2  luna_data_secret.yml.j2
