[metadata]
name = ansible-role-rhoso-luna-hsm
summary = ansible-role-rhoso-luna-hsm - Ansible role to configure Lunasa HSM clients for RHOSO.
description_file =
    README.md
author = RHOSO Security DFG
author_email = alee@redhat.com
home_page = https://github.com/openstack-k8s-operators/ansible-role-rhoso-luna-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[files]
data_files =
    share/ansible/roles/rhoso_luna_hsm/defaults = defaults/*
    share/ansible/roles/rhoso_luna_hsm/meta = meta/*
    share/ansible/roles/rhoso_luna_hsm/tasks = tasks/*
    share/ansible/roles/rhoso_luna_hsm/templates = templates/*
    share/ansible/roles/rhoso_luna_hsm/files = files/*
